Fixed alignment hopefully? Changed score text to be more consistent

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -39,6 +39,5 @@ main {
 }
 
 footer {
-  margin-top: 2rem;
   min-height: 10vh;
 }
