--- a/src/styles/Gameover.css
+++ b/src/styles/Gameover.css
@@ -11,7 +11,6 @@
   overflow: hidden;
   height: auto;
   flex-wrap: wrap;
-  margin-top: 0.5rem;
 }
 
 .scrollingCardGroup {
@@ -19,14 +18,15 @@
 }
 
 .endCardWrapper {
-  width: 100%;
-  height: 25vh;
+  width: 95%;
+  min-height: 25vh;
+  margin: 0.5rem;
 }
 
 .dimmed {
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 
