--- a/src/styles/Score.css
+++ b/src/styles/Score.css
@@ -1,8 +1,7 @@
 .score {
-  margin: 0;
+  margin-top: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100%;
   font-size: 20px;
